NLP TP's/texts/robotics/robotics.stackexchange_0000076024.txt
Q:

contact sensor has no member named contacts

I was following this tutorial , but as i try to build the code i get theis error msg:
/usr/include/boost/asio/detail/impl/socket_ops.ipp:266:5: note:   ‘boost::asio::detail::socket_ops::bind’
 int bind(socket_type s, const socket_addr_type* addr,
     ^
/home/rob/Documents/gazebo_contact_tutorial/ContactPlugin.cc: In member function ‘virtual void gazebo::ContactPlugin::OnUpdate()’:
/home/rob/Documents/gazebo_contact_tutorial/ContactPlugin.cc:43:34: error: ‘class gazebo::sensors::ContactSensor’ has no member named ‘Contacts’
   contacts = this->parentSensor->Contacts();

How to remove it? I am using ros indigo.

Originally posted by dinesh on ROS Answers with karma: 932 on 2016-08-29
Post score: 0

A:

Ans: enter

Originally posted by dinesh with karma: 932 on 2016-08-30
This answer was ACCEPTED on the original site
Post score: 0

Original comments
Comment by gvdhoorn on 2016-08-30:
I really appreciate you reporting back on the answer to this question, but cross-posting to answers.gazebosim.org is really bad style, especially if your only motivation is "to get answer quickly." (as you wrote in error launching world file in gazebo.

